--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,60 @@
 <resources>
     <string name="app_name">PelecardExam</string>
+
+    <string name="currency_usd">USD</string>
+    <string name="currency_ils">ILS</string>
+
+    <string name="main">Main</string>
+
+    <string name="amount">Amount</string>
+    <string name="enter_amount">Enter amount</string>
+
+    <string name="payments">Payments</string>
+    <string name="number_of_payments">Number of payments</string>
+
+    <string name="currency">Currency</string>
+    <string name="signature">Signature</string>
+
+    <string name="receipt">Receipt</string>
+    <string name="convert">Convert</string>
+    <string name="finish">Finish</string>
+    <string name="refresh">Refresh</string>
+    <string name="settings">Settings</string>
+    <string name="cancel">Cancel</string>
+    <string name="submit">Submit</string>
+    <string name="exit">Exit</string>
+
+    <string name="exit_app">Exit App</string>
+    <string name="exit_app_msg">Are you sure you want to exit this Exam App for Pelecard ?</string>
+
+    <string name="information">Information</string>
+
+    <string name="information_icon">Information Icon</string>
+    <string name="settings_icon">Settings Icon</string>
+    <string name="back_icon">Back Icon</string>
+
+    <string name="account_id">Account ID: %1$s</string>
+    <string name="total">Total: %1$s</string>
+    <string name="used">Used: %1$s</string>
+    <string name="remaining">Remaining: %1$s</string>
+    <string name="info_screen_msg">This screen shows the status of the API usage for FreeCurrency API.</string>
+    <string name="conversion_rates">Conversion Rates</string>
+
+    <string name="server_error_msg">Error from server</string>
+    <string name="analog_clock_unavailable_error_msg">Analog clock is not supported on this device</string>
+    <string name="ui_state_info_screen_error_msg">Unimplemented UiState: type %1$s of %2$s is not implemented for InfoScreen()</string>
+    <string name="ui_state_conversion_screen_error_msg">Unimplemented UiState: type %1$s of %2$s is not implemented for ConversionScreen()</string>
+    <string name="ui_state_receipt_screen_error_msg">Unimplemented UiState: type %1$s of %2$s is not implemented for ReceiptScreen()</string>
+    <string name="ui_state_signature_screen_error_msg">Unimplemented UiState: type %1$s of %2$s is not implemented for SignatureScreen()</string>
+    <string name="ui_state_navigation_component_error_msg">Unimplemented Navigation: type %1$s of %2$s is not implemented for NavigationComponent()</string>
+
+    <string name="cancel_payment">Cancel Payment</string>
+    <string name="cancel_payment_msg">Are you sure you want to cancel this payment?</string>
+    <string name="are_you_sure">Are you sure?</string>
+    <string name="let_s_sign">Let\'s Sign</string>
+    <string name="please_sign_first">Please sign first</string>
+    <string name="please_sign_below">Please sign below</string>
+    <string name="exit_dialog">Exit Dialog</string>
+    <string name="are_you_sure_you_want_to_exit_screen">Are you sure you want to exit %1$s screen?</string>
+
 </resources>
